# Carna

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-Carna  README.md  ReadMe.txt  create_msvc10_project.bat  linux_build-default.bash  linux_build-egl.bash  linux_build-egl.sh  linux_build.bash  linux_build.sh  win32_msvc10_build.bat
.github/workflows/: build-docs.yml  build.yml  linux_build.yml
docs/: index.html
docs/html/: Aggregation_8h.html  Aggregation_8h__dep__incl.dot  Aggregation_8h__dep__incl.map  Aggregation_8h__dep__incl.md5  Aggregation_8h__incl.dot  Aggregation_8h__incl.map  Aggregation_8h__incl.md5  Aggregation_8h_source.html  Aggregation_8hpp.html  Aggregation_8hpp_source.html  Association_8h.html  Association_8h__dep__incl.dot  Association_8h__dep__incl.map  Association_8h__dep__incl.md5  Association_8h__incl.dot  Association_8h__incl.map  Association_8h__incl.md5  Association_8h_source.html  Association_8hpp.html  Association_8hpp_source.html  BaseBuffer_8h.html  BaseBuffer_8h__dep__incl.dot  BaseBuffer_8h__dep__incl.map  BaseBuffer_8h__dep__incl.md5  BaseBuffer_8h__incl.dot  BaseBuffer_8h__incl.map  BaseBuffer_8h__incl.md5  BaseBuffer_8h_source.html  BaseBuffer_8hpp.html  BaseBuffer_8hpp_source.html  BlendFunction_8h.html  BlendFunction_8h__dep__incl.dot  BlendFunction_8h__dep__incl.map  BlendFunction_8h__dep__incl.md5  BlendFunction_8h__incl.dot  BlendFunction_8h__incl.map  BlendFunction_8h__incl.md5  BlendFunction_8h_source.html  BlendFunction_8hpp.html  BlendFunction_8hpp_source.html  (+2618 more)
include/Carna/: Carna.h  Carna.h~
include/LibCarna/: LibCarna.h  LibCarna.hpp
misc/: FindCarna.cmake.in  FindLibCarna.cmake.in  Version.h.in  Version.hpp.in  compiler_specific.cmake  configure.cmake.in  file_header.txt  meditec.cmake  update_all_file_headers.bash  update_file_headers.py
misc/CMake/: meditec.cmake
misc/MediTEC/: CMakeLists.txt  FindCarna.cmake.in  FindTRTK.cmake  configure.cmake.in  meditec.cmake
src/: shaders.qrc
src/CuttingPlanes/: CuttingPlanesStage.cpp
src/MPR/: AbstractSliderPainter.cpp  AxialPlaneController.cpp  AxialPlaneControllerUI.cpp  AxialPlaneRenderer.cpp  AxialPlaneVisualization.cpp  AxialSliderScreenSpaceBuffer.cpp  DefaultAxialPlaneRenderer.cpp  DefaultAxialPlaneRendererDetails.cpp  DefaultAxialPlaneVisualization.cpp  DefaultSliderPainter.cpp  IntersectionMovementIntentProcessor.cpp  PartialSliderPainter.cpp  SliderType.cpp
src/SlicePlanes/: DefaultSlicePlaneRenderer.cpp  DefaultSlicePlaneVisualization.cpp  SlicePlane.cpp  SlicePlaneControllerUI.cpp  SlicePlaneDetails.cpp  (+2 more)
test/: CMakeLists.txt
test/CarnaInteractiveTest/: CMakeLists.txt
test/CarnaInteractiveTest/src/: BinaryMaskDemo.h  CompressedVolumeExporter.h  CompressedVolumeImporter.h  FactorialMaskDemo.h  HistogramExporter.h  InteractiveOffscreenDisplayDemo.h  MPRDemo.h  MyVisualizationDemo.h  OffscreenDisplayDemo.cpp  OffscreenDisplayDemo.h  OffscreenDisplayTestingWidget.cpp  OffscreenDisplayTestingWidget.h  OpeningDialog.h  SlicePlaneVisualizationDemo.h  VolumeVisualizationDemo.h  main.cpp
test/Demo/: CMakeLists.txt
test/Demo/src/: main.cpp
test/IntegrationTests/: DRRMaskRenderingStageIntegrationTest.cpp  DRRMaskRenderingStageIntegrationTest.hpp  DVRMaskRenderingStageIntegrationTest.cpp  DVRMaskRenderingStageIntegrationTest.hpp  FrameRendererIntegrationTest.cpp  FrameRendererIntegrationTest.h  FrameRendererIntegrationTest.hpp  MaskRenderingStageIntegrationTest.cpp  MaskRenderingStageIntegrationTest.h  MaskRenderingStageIntegrationTest.hpp  ParallaxStageIntegrationTest.cpp  ParallaxStageIntegrationTest.h  ParallaxStageIntegrationTest.hpp  configure.cmake
test/ModuleTests/: CuttingPlanesStageTest.cpp  CuttingPlanesStageTest.h  CuttingPlanesStageTest.hpp  DRRStageTest.cpp  DRRStageTest.h  DRRStageTest.hpp  DVRStageTest.cpp  DVRStageTest.h  DVRStageTest.hpp  FrameRendererHelperTest.cpp  FrameRendererHelperTest.h  FrameRendererHelperTest.hpp  HUVolumeGridTest.cpp  HUVolumeGridTest.h  MIPStageTest.cpp  MIPStageTest.h  MIPStageTest.hpp  MaskRenderingStageTest.cpp  MaskRenderingStageTest.h  MaskRenderingStageTest.hpp  MeshColorCodingStageTest.cpp  MeshColorCodingStageTest.h  MeshColorCodingStageTest.hpp  OffscreenRenderingTest.cpp  OffscreenRenderingTest.h  OpaqueRenderingStageTest.cpp  OpaqueRenderingStageTest.h  OpaqueRenderingStageTest.hpp  ParallaxStageTest.cpp  ParallaxStageTest.h  PointMarkerHelperTest.cpp  PointMarkerHelperTest.h  PointMarkerHelperTest.hpp  TransparentRenderingStageTest.cpp  TransparentRenderingStageTest.h  TransparentRenderingStageTest.hpp  VolumeGridTest.cpp  VolumeGridTest.h  VolumeGridTest.hpp  VolumeRendererTest.cpp  (+2 more)
test/Tools/: FramebufferTester.cpp  FramebufferTester.h  HUGZSceneFactory.cpp  HUGZSceneFactory.h  HUGZSceneFactory.hpp  HUIO.h  HUIO.hpp  MockSceneFactory.cpp  MockSceneFactory.h  MyVisualization.cpp  MyVisualization.h  QGLContextHolder.cpp  QGLContextHolder.h  QGLContextHolder.hpp  TestApplication.cpp  TestApplication.h  TestApplication.hpp  TestFramebuffer.cpp  TestFramebuffer.h  TestFramebuffer.hpp  TestScene.cpp  TestScene.h  TestScene.hpp  TestSuite.h  TestSuite.hpp
test/UnitTests/: BufferedHUVolumeTest.cpp  BufferedHUVolumeTest.h  BufferedHUVolumeTest.hpp  BufferedIntensityVolumeTest.cpp  BufferedIntensityVolumeTest.h  BufferedIntensityVolumeTest.hpp  BufferedNormalMap3DTest.cpp  BufferedNormalMap3DTest.h  BufferedNormalMap3DTest.hpp  ColorMapTest.cpp  ColorMapTest.hpp  ColorTest.cpp  ColorTest.h  ColorTest.hpp  CounterTest.cpp  CounterTest.h  GLContextTest.cpp  GLContextTest.hpp  HUVTest.cpp  HUVTest.h  HUVTest.hpp  HistogramClassDetectorTest.cpp  HistogramClassDetectorTest.h  HistogramTest.cpp  HistogramTest.h  SceneTest.cpp  SceneTest.h  VolumeGridHelperTest.cpp  VolumeGridHelperTest.h  VolumeGridHelperTest.hpp  VolumeHistogramTest.cpp  VolumeHistogramTest.h  configure.cmake  mathTest.cpp  mathTest.h  mathTest.hpp
test/res/: histograms.qrc
test/res/histograms/: 07.04.18-07.04.34-DST-1.3.12.2.1107.5.1.4.60025.txt  DCMCDW-3057454334.txt
test_cmake/: CMakeLists.txt  test.cpp  test.sh
(+1043 files in other folders)
